landing page styling and functionality (rough) javascript (fix shiftDecoy)

--- a/main.css
+++ b/main.css
@@ -7,25 +7,50 @@
 	font-family:'Shadows Into Light' ;
 }
 
+h1{
+	text-align: center;
+	margin: 25% auto 0 auto;
+}
+
+.gameLink{
+
+	width: 200px;
+	height: auto;
+	text-align: center;
+	margin: 0 auto;
+	/*border:2px solid black;*/
+	background:white;
+	box-shadow:10px 10px 42px -2px rgba(0,0,0,.7);
+}
+
+.iBox{
+
+	width: 200px;
+	height: auto;
+	/*border: 2px solid black;*/
+	margin: 10px auto;
+	text-align:center;
+}
+
 .start{
-height:50px;
-width:100px;
-/*border: 1px solid black;*/
-margin: 0 auto;
-margin-bottom: 10px;
-padding-top:20px;
-text-align:center;
-box-shadow: 10px 10px 42px -2px rgba(0,0,0,.5);
-border-radius:30px;
+	height:50px;
+	width:100px;
+	/*border: 1px solid black;*/
+	margin: 0 auto;
+	margin-bottom: 10px;
+	padding-top:20px;
+	text-align:center;
+	box-shadow: 10px 10px 42px -2px rgba(0,0,0,.5);
+	border-radius:30px;
 }
 
 .roundBox{
-height:50px;
-width:100px;
-/*border: 1px solid black;*/
-margin: 0 auto;
-text-align:center;
-padding-top: 20px;
+	height:50px;
+	width:100px;
+	/*border: 1px solid black;*/
+	margin: 0 auto;
+	text-align:center;
+	padding-top: 20px;
 
 }
 
